feat: добавлен последний слайд

--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -361,19 +361,15 @@ a {
         background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 44%, rgba(2,0,36,1) 70%), url("../Pages/others/preview.jpg");
         background-size:contain;
         background-repeat: no-repeat;
-        //animation: background-others-anim 1s infinite;
     }
 
 }
 
-// @keyframes background-others-anim {
-//     25% {
-//     }
-//     50% {
-//         background-position: 10px 10px;
-//     }
-    
-// }
+#ukko {
+    width: 320px;
+    height: 180px;
+    margin-bottom: 40px; 
+}
 
 .page {
     &001 {
