--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -28,6 +28,7 @@ body {
   font-family: Enthalpy298;
   letter-spacing: 3px;
   font-size: 24px;
+  border-width: 0;
 }
 .start-button:hover {
   -webkit-animation: clicked_h 0.2s infinite;
@@ -69,6 +70,7 @@ body {
   font-family: Enthalpy298;
   letter-spacing: 3px;
   font-size: 24px;
+  border-width: 0;
 }
 .start-button2:not(focus) {
   -webkit-animation: clicked_hide_button 2s;
@@ -147,6 +149,7 @@ body {
   color: whitesmoke;
   cursor: pointer;
   font-size: 24px;
+  border-width: 0;
 }
 .button:hover {
   -webkit-animation: clicked2_h 2s infinite;
