--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -377,28 +377,28 @@ a {
 .page {
     &001 {
         width:100%;
-        background: #00FF00;
+        background: #807060;
         color: aqua;
         opacity: 0;
     }
 
     &002 {
         width:100%;
-        background: red;
-        color: antiquewhite;
+        background: #bf3030;
+        color:antiquewhite;
         opacity: 0;
     }
 
     &003 {
         width:100%;
-        background: blue;
+        background:#0248cc;
         color:antiquewhite;
         opacity: 0;
     }
 
     &004 {
         width:100%;
-        background: green;
+        background: #2b8000;
         color:antiquewhite;
         opacity: 0;
     }
@@ -414,6 +414,20 @@ a {
         width:100%;
         background: blueviolet;
         color:antiquewhite;
+        opacity: 0;
+    }
+
+    &007 {
+        width:100%;
+        background: #ff8049;
+        color:antiquewhite;
+        opacity: 0;
+    }
+
+    &008 {
+        width:100%;
+        background: #b35a34;
+        color: antiquewhite;
         opacity: 0;
     }
 
