feat: параллакс на шариках в портфолио

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,5 +1,6 @@
 
 body {
+    scroll-behavior: smooth;
     position: relative;
     background-color:rgba(52, 132, 190, 1);
     //background-color: #8cbfe4;
