--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 body {
+  scroll-behavior: smooth;
   position: relative;
   background-color: rgb(52, 132, 190);
   max-width: 1280px;
