--- a/scss/header.scss
+++ b/scss/header.scss
@@ -9,6 +9,13 @@
 
     &__item {
         color: whitesmoke;
+        cursor:pointer;
+
+        &:hover {
+            text-decoration: underline;
+            text-decoration-thickness: 4px;
+            text-underline-offset:-58px;
+        }
     }
 
     &-row {
