--- a/scss/base.scss
+++ b/scss/base.scss
@@ -9,7 +9,7 @@ body {
     margin:0 auto;
     //background-color: #3484BE;
     font-family:  'Inter', sans-serif;
-    -webkit-font-smoothing: antialiased;
+    //-webkit-font-smoothing: antialiased;
     color: #000;
     overflow-x: hidden;
 }
