--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,6 +58,10 @@
         display: flex;
         align-items: center;
         text-align: center;
+
+        &:active {
+            box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+        }
     }
 
     &__markup-textblock {
