--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,9 +58,11 @@
         display: flex;
         align-items: center;
         text-align: center;
+        cursor: pointer;
 
         &:active {
             box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+            animation: push_button 0.3s;
         }
     }
 
@@ -68,5 +70,12 @@
         position:relative;
         width: 760px;
         text-align: center;
+    }
+}
+
+
+@keyframes push_button {
+    50% {
+        transform: translate(0px, 5px) scale(0.9);
     }
 }
