--- a/styles/main.css
+++ b/styles/main.css
@@ -51,12 +51,27 @@
   display: flex;
   align-items: center;
   text-align: center;
+  cursor: pointer;
 }
 .main__button:active {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+  -webkit-animation: push_button 0.3s;
+          animation: push_button 0.3s;
 }
 .main__markup-textblock {
   position: relative;
   width: 760px;
   text-align: center;
+}
+
+@-webkit-keyframes push_button {
+  50% {
+    transform: translate(0px, 5px) scale(0.9);
+  }
+}
+
+@keyframes push_button {
+  50% {
+    transform: translate(0px, 5px) scale(0.9);
+  }
 }/*# sourceMappingURL=main.css.map */
