--- a/works/Pages/oknahouse/styles/section1.css
+++ b/works/Pages/oknahouse/styles/section1.css
@@ -75,6 +75,7 @@
 .order-form-markup__checkbox {
   margin-bottom: 24px;
   padding-left: 30px;
+  cursor: pointer;
 }
 .order-form-markup__input-fields {
   margin-top: 40px;
@@ -99,6 +100,7 @@
   line-height: 14px;
   display: inline-block;
   vertical-align: middle;
+  cursor: pointer;
 }
 .order-form__input-field {
   width: 326px;
@@ -151,6 +153,7 @@
   font-size: 14px;
   line-height: 16px;
   display: block;
+  cursor: pointer;
 }
 .order-form__measure-tape {
   position: absolute;
@@ -189,4 +192,5 @@
   background-repeat: no-repeat;
   background-position: 3px -5px;
   vertical-align: middle;
+  cursor: pointer;
 }/*# sourceMappingURL=section1.css.map */
