fix: начата работа над адаптивом резюме. выполнена вторая домашка интенсива

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -4,7 +4,7 @@
         width: 40px;
         height: 40px;
         background-image: url(../images/header/profile-item.svg);
-        background-image: cover;
+        background-size: cover;
     }
 
     &__item {
