--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,7 +68,7 @@
 
     &__markup-textblock {
         position:relative;
-        width: 760px;
+        max-width: 760px;
         text-align: center;
     }
 }
