--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,13 @@
 @import "review.css";
 @import "footer.css";
 @import "effects.css";
+@import "header-mobile.css";
+@import "main-mobile.css";
+@import "decor-mobile.css";
+@import "skills-mobile.css";
+@import "about-mobile.css";
+@import "portfolio-mobile.css";
+@import "review-mobile.css";
+@import "footer-mobile.css";
+@import "effects-mobile.css";
+@import "base-mobile.css";
