--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
   width: 40px;
   height: 40px;
   background-image: url(../images/header/profile-item.svg);
-  background-image: cover;
+  background-size: cover;
 }
 .menu__item {
   color: whitesmoke;
