fix: первая версия адаптива

--- a/scss/about.scss
+++ b/scss/about.scss
@@ -61,7 +61,7 @@
     &-markup {
         display: block;
         margin: 714px 0 0 66px;
-        width: 768px;
+        max-width: 768px;
     }
 }
 
