--- a/scss/review.scss
+++ b/scss/review.scss
@@ -106,11 +106,13 @@
         display: flex;
         flex-direction: column;
         align-items:center;
+        margin-bottom: 20px;
     }
     
     &-rows {
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
     }
 
 }
