--- a/scss/skills-mobile.scss
+++ b/scss/skills-mobile.scss
@@ -15,6 +15,10 @@
             margin-top: 150px;
         }
     }
+
+    .skill__item {
+        line-height: 21px;
+    }
 }
 
 @media screen and (max-width: 599px) {
@@ -31,4 +35,5 @@
             font-size: 12px;
         }
     }
+
 }
