--- a/styles/review.css
+++ b/styles/review.css
@@ -89,8 +89,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
 }
 .review-rows {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }/*# sourceMappingURL=review.css.map */
