fix: запрещено масштабирование адаптива

--- a/scss/footer-mobile.scss
+++ b/scss/footer-mobile.scss
@@ -51,11 +51,11 @@
         // }
     
     
-        &-row {
-            height: 250px;
-            display:flex;
-            justify-content:center;
-            align-items:center;
-        }
+        // &-row {
+        //     height: 250px;
+        //     display:flex;
+        //     justify-content:center;
+        //     align-items:center;
+        // }
     }
 }
