--- a/scss/base.scss
+++ b/scss/base.scss
@@ -15,8 +15,8 @@ body {
 }
     
 .container {
-    max-width: 1280px;
-    margin:0 auto;
+    // max-width: 1280px;
+    // margin:0 auto;
     //background-color: #3484BE;
     font-family:  'Inter', sans-serif;
     color: #000;
