--- a/styles/style.css
+++ b/styles/style.css
@@ -17,5 +17,5 @@
 @import "portfolio-mobile.css"; 
 @import "review-mobile.css";
 @import "footer-mobile.css";
-/* @import "effects-mobile.css";
-@import "base-mobile.css"; */
+@import "effects-mobile.css";
+@import "base-mobile.css"; 
