--- a/scss/base.scss
+++ b/scss/base.scss
@@ -41,3 +41,7 @@ p {
     margin-top: 0.5em; /* Отступ сверху */
     margin-bottom: 1em; /* Отступ снизу */
 }
+
+.intersection {
+    display:none;
+}
