--- a/styles/base.css
+++ b/styles/base.css
@@ -29,4 +29,8 @@ body {
 p {
   margin-top: 0.5em; /* Отступ сверху */
   margin-bottom: 1em; /* Отступ снизу */
+}
+
+.intersection {
+  display: none;
 }/*# sourceMappingURL=base.css.map */
