--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -1,6 +1,9 @@
 @font-face {
     font-family: Radiotechnika;
     src: url("../fonts/Radiotechnika.otf") format("opentype");
+}
+
+@font-face {
     font-family: Enthalpy298;
     src: url("../fonts/Enthalpy298.otf") format("opentype");
 }
@@ -95,6 +98,11 @@ body {
 }
 
 .house-start {
+    margin: 33px 0 0 409px;
+    transform: rotate(-45deg);
+}
+
+.carsharing-start {
     margin: 33px 0 0 409px;
     transform: rotate(-45deg);
 }
@@ -325,9 +333,15 @@ a {
         background-repeat: no-repeat;
     }
 
+    &-carsharing {
+        background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 36%, rgba(2,0,36,1) 70%), url("../Pages/cars/preview.jpg");
+        background-size:contain;
+        background-repeat: no-repeat;
+    }
+
     &-input {
         background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/forma/preview.jpg");
-        background-size:cover;
+        background-size:contain;
         background-repeat: no-repeat;
     }
 
@@ -447,3 +461,20 @@ a {
     opacity: 1;
     display: flex;
 }
+
+@media screen and (max-width: 1160px) {
+    .buttons {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .button-decor {
+        border-bottom-left-radius:30px;
+        border-bottom-right-radius:30px;
+
+    }
+
+
+}
+
