fix: пофикшены отступы текста для мобилок

--- a/scss/about-mobile.scss
+++ b/scss/about-mobile.scss
@@ -12,8 +12,8 @@
         position: absolute;
         width: 1159px;
         height: 1159px;
-        left: -280px;
-        top: 1240px;
+        left: -150px;
+        top: 1200px;
         background: linear-gradient(180deg, #9DFA73 30.6%, rgba(157, 250, 115, 0.684964) 45.7%, rgba(157, 250, 115, 0.401965) 59.49%, rgba(157, 250, 115, 0) 100%);
         border-radius: 50%;
         z-index: -1;
@@ -27,13 +27,32 @@
     }   
 }
 
-@media screen and (max-width: 599px) {
+@media screen and (max-width: 619px) {
+    .about-block {
+        // &__button {
+        //     top: 310px;
+        //     left: 135px;
+        // }
+
+        &__title {
+            font-size: 54px;
+        }
+
+        &__subtitle {
+            font-size: 16px;
+        }
+
+        &__description {
+            font-size: 14px;
+        }
+    };
+
     .about-sphere {
         position: absolute;
         width: 1159px;
         height: 1159px;
-        left: -330px;
-        top: 1150px;
+        left: -200px;
+        top: 1100px;
         background: linear-gradient(180deg, #9DFA73 30.6%, rgba(157, 250, 115, 0.684964) 45.7%, rgba(157, 250, 115, 0.401965) 59.49%, rgba(157, 250, 115, 0) 100%);
         border-radius: 50%;
         z-index: -1;
