--- a/scss/base.scss
+++ b/scss/base.scss
@@ -2,6 +2,8 @@
 body {
     scroll-behavior: smooth;
     position: relative;
+    top: 0;
+    left: 0;
     background-color:rgba(52, 132, 190, 1);
     //background-color: #8cbfe4;
     //z-index: -100;
