--- a/scss/skills-mobile.scss
+++ b/scss/skills-mobile.scss
@@ -32,8 +32,12 @@
         }
 
         &__description {
-            font-size: 12px;
+            font-size: 14px;          
         }
+    }
+
+    .skill__item {
+        line-height: 20px;
     }
 
 }
