--- a/styles/base.css
+++ b/styles/base.css
@@ -2,6 +2,8 @@
 body {
   scroll-behavior: smooth;
   position: relative;
+  top: 0;
+  left: 0;
   background-color: rgb(52, 132, 190);
   max-width: 1280px;
   margin: 0 auto;
