--- a/styles/skills-mobile.css
+++ b/styles/skills-mobile.css
@@ -24,6 +24,9 @@
     font-size: 16px;
   }
   .text-block__description {
-    font-size: 12px;
+    font-size: 14px;
+  }
+  .skill__item {
+    line-height: 20px;
   }
 }/*# sourceMappingURL=skills-mobile.css.map */
