--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -150,6 +150,7 @@ body {
     cursor: pointer;
     font-size: 24px;
     border-width:0;
+    outline:none;
 
     &:hover {
         animation: clicked2_h 2s infinite;
