--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -158,6 +158,7 @@ body {
   cursor: pointer;
   font-size: 24px;
   border-width: 0;
+  outline: none;
 }
 .button:hover {
   -webkit-animation: clicked2_h 2s infinite;
